--- a/python_cv_gpu/Dockerfile
+++ b/python_cv_gpu/Dockerfile
@@ -1,4 +1,6 @@
-from tensorflow/tensorflow:latest-gpu-py3
+from tensorflow/tensorflow:latest-gpu-py3-jupyter
+COPY requirements.txt /tf
 RUN apt-get update && apt-get install -y libsm6 libxext6 libxrender-dev 
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
 EXPOSE 8888
+CMD jupyter-notebook --port=8888 --no-browser --ip=0.0.0.0 --allow-root
